2004-09-21  Luc Teirlinck  <teirllm@auburn.edu>

	* subr.el (after-change-major-mode-hook): Doc fix.

2004-09-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Doc fix.  Add a new tip about the use of gsprint instead
	of ghostscript for monochrome PostScript file in Windows.

2004-09-21  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char): Checking of quail activation
	fixed.

2004-09-20  Luc Teirlinck  <teirllm@auburn.edu>

	* subr.el (run-mode-hooks): Run `after-change-major-mode-hook'
	after the mode hooks instead of before.  Doc fix.

2004-09-20  Jason Rumney  <jasonr@gnu.org>

	* startup.el (command-line) [windows-nt]: Try .emacs first, then
	_emacs, but revert to .emacs if neither exists in home directory.

2004-09-20  John Paul Wallington  <jpw@gnu.org>

	* bindings.el (completion-ignored-extensions): Add .dfsl.

2004-09-20  Richard M. Stallman  <rms@gnu.org>

	* bindings.el (scroll-left): Make it disabled.

	* files.el (enable-local-eval): Doc fix.

	* indent.el (move-to-left-margin): Special case for minibuffer.

	* term.el (term-emulate-terminal): Turn off undo for output.
	Use with-current-buffer and save-selected-window.

	* eshell/esh-ext.el (eshell-explicit-command-char): Doc fix.

	* progmodes/make-mode.el (makefile-fill-paragraph):
	Don't insist on spaces when looking for comments.  # is enough.

	* files.el (hack-local-variables): Copy the variables list
	to another buffer, strip prefixes and suffixes there, then read.
	(enable-local-eval): Doc fix.
	(ignored-local-variables): Initialize to nil.
	(risky-local-variable-p): Don't check ignored-local-variables here.
	(hack-one-local-variable): Ignore var if in ignored-local-variables.

2004-09-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/sh-script.el (sh-mode-default-syntax-table): Set syntax
	of = to "." (punctuation).

2004-09-19  Stefan  <monnier@iro.umontreal.ca>

	* subr.el (event-basic-type): Fix mask (extend to 22bits).
